--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
       
-        <title> Eerste webpage </title>
+        <title> Derde webpage </title>
     </header>
 
     <main>
